# UbuntuVersionFetcher

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  UbuntuCloudFactory.hpp  UbuntuCloudFetcher.cpp  UbuntuCloudFetcher.hpp  cmake_install.cmake  main.cpp
src/: UbuntuCloudFactory.hpp  UbuntuCloudFetcher.cpp  UbuntuCloudFetcher.hpp  UbuntuCloudIO.cpp  UbuntuCloudIO.hpp  UbuntuCloudInterface.hpp  handlers.cpp  handlers.hpp  main.cpp
